navbar bug fixes when scroll on mobile + change navbar color

--- a/MichailidisAlarms.gr/aboutus.css
+++ b/MichailidisAlarms.gr/aboutus.css
@@ -5,9 +5,17 @@ html{
 html::-webkit-scrollbar{
     display: none;
 }
+body{
+    overflow-x: hidden;
+}
 .fa-bars {
     color: #052630de;
     font-size: 30px;
+}
+@media screen and (max-width: 1350px){
+    #scrolltotop{
+        display:none !important;
+    }
 }
 #scrolltotop{
     background-color: #e6e6e6;
@@ -29,10 +37,10 @@ html::-webkit-scrollbar{
     width: 195px;
 }
 nav{
-//    background-image: linear-gradient(to right,#052630de, #10779600);
     background-color: #444444;
+    background-image: linear-gradient(to right,#052630de, #10779600);
     overflow: hidden;
-    padding: 0rem 1rem 0 0 !important;
+    padding: 0 1rem 0 0 !important;
     transition: 0.5s;
     position: fixed;
     width: 100%;
